# microSplit-reproducibility

./: .gitignore  LICENSE  README.md  env.yml  evaluate_dao3.ipynb  evaluate_exp_micrV2.ipynb  evaluate_exp_microV1.ipynb  evaluate_nicola.ipynb  evaluate_pavia3_seq.ipynb  evaluate_puncta_removal.ipynb  example_datasets.ipynb  example_datasets_tests.ipynb  example_training_LVAE_denoiSplit.ipynb  example_training_LVAE_muSplit.ipynb  microSplit_evaluate.sbatch  microSplit_training.sbatch  pyproject.toml
configs/: __init__.py  biosr.py  dao3ch.py  dao3chWithInput.py  exp_microscopy_v1.py  exp_microscopy_v2.py  factory.py  ht_iba1_ki64_2023.py  ht_iba1_ki64_2024.py  nikolaData.py  pavia3.py  sox2golgi.py  sox2golgi_v2.py
data/: __init__.py  data_modules.py
datasets/: __init__.py  biosr.py  care3D.py  common.py  dao_3ch.py  evaluation_dset.py  ht_iba1_ki64.py  ht_iba1_ki64_2023.py  ht_iba1_ki64_2024.py  multicrop_dset.py  multicrop_dset_train_val_data.py  multifile_raw_dataloader.py  pavia3.py  sox2golgi_v2.py
examples/: evaluate_LVAE.ipynb  evaluation_template.ipynb  example_training_LVAE_denoiSplit.ipynb  example_training_LVAE_muSplit.ipynb  train_LVAE_denoiSplit.py  train_LVAE_denoiSplit_3D.py  train_LVAE_muSplit.py  train_nikola_data.py
log/: HTIba1Ki67_eval.json
old_notebooks/: evaluate_dao3_ch01.ipynb  evaluate_dao3_ch23.ipynb  evaluate_exp_micrV2.ipynb  evaluate_exp_microV1_a.ipynb  evaluate_pavia3_seq.ipynb  evaluate_taverna.ipynb  example_datasets.ipynb  example_datasets_tests.ipynb
run/: __init__.py  evaluate.py  train_denoiSplit.py  train_muSplit.py
sbatch/: dao3_ch01.sbatch
scripts/: README.md  evaluate_ht_iba1_ki64_2023.py  noise_model_saving.ipynb  train_LVAE_denoiSplit.py  train_LVAE_muSplit.py  train_care3D.py  train_dao_ch01.py  train_dao_ch23.py  (+10 more)
(+98 files in other folders)
