# https://peps.python.org/pep-0517/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/

# https://hatch.pypa.io/latest/config/metadata/

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# https://peps.python.org/pep-0621/
[project]
name = "microsplit-reproducibility"
version = "0.0.1"
description = "Reproducibility package for MicroSplit, a deep-learning based microscopy image splitting algorithm."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
    { name = 'Ashesh', email = 'ashesh.ashesh@fht.org' },
    { name = 'Federico Carrara', email = 'federico.carrara@fht.org' },
    { name = 'Igor Zubarev', email = 'igor.zubarev@fht.org' },
    { name = 'Vera Galinova', email = 'vera.galinova@fht.org' },
    { name = 'Melisande Croft', email = 'melisande.croft@fht.org' },
    { name = 'Joran Deschamps', email = 'joran.deschamps@fht.org' },
    { name = 'Florian Jug', email = 'florian.jug@fht.org' },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Typing :: Typed",
]
dependencies = [
    "careamics[examples, wandb]>=0.0.8",
    "imagecodecs<=2024.9.22",
    "nis2pyr",
    "nd2",
    "czifile",
    "nd2reader",
    "microssim",
]

[project.urls]
homepage = "https://careamics.github.io/"
repository = "https://github.com/CAREamics/MicroSplit-reproducibility"
